# stardazed-native

./: .gitignore  CMakeLists.txt  Config.cpp  README.md  StringFormat.cpp
Mac OS X/: mac_Application.mm  mac_RenderTarget.mm
StarDazed/StarDazed.xcodeproj/: project.pbxproj
ext/farmhash/: farmhash.cpp
ext/jpgd/: jpgd.cpp  jpgd.h
ext/zlibredux/: crc32.c  inflate.c
include/: Angle.hpp  Application.h  ConceptTraits.hpp  Config.h  Foundation.hpp  MatVecMethods.hpp  Matrix.hpp  RenderTarget.h  RenderTarget.hpp  RenderTargetOptions.h  StringFormat.hpp  Transform.hpp  Vector.hpp
proj/stardazed-native.xcodeproj/: project.pbxproj
proj/stardazed.xcodeproj/: project.pbxproj
src/audio/: AudioContext.hpp  mac_AudioContext.mm
src/common/: TextFile.cpp
src/container/: Algorithm.hpp  ArenaSet.hpp  Array.hpp  Deque.hpp  FlagSet.hpp  HashMap.hpp  MultiArrayBuffer.hpp  MultiElementArrayBuffer.hpp  ObjectPool.hpp  RefTree.hpp  RingBuffer.hpp  STLBufferIterator.hpp
src/controls/: Bindings.hpp  ControlsContext.hpp  mac_ControlsContext.cpp  mac_ControlsContext.hpp  mac_ControlsContext.mm
src/device/: Controller.hpp  DevicesContext.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.hpp  mac_DevicesContext.hpp  mac_DevicesContext.mm  mac_VKeyCodes.hpp  mac_X360Controller.cpp  mac_X360Controller.hpp
src/event/: EventService.hpp  Keyboard.hpp  mac_EventService.hpp  mac_EventService.mm
src/filesystem/: FileSystem.hpp  mac_FileSystem.cpp
src/geom/: Generators.cpp  Generators.hpp  Manipulators.cpp  Manipulators.hpp  Mesh.cpp  Mesh.hpp  Primitives.cpp  Primitives.hpp
src/input/: InputContext.hpp  Keyboard.hpp
src/io/: 360ControllerInfoExport.html  controller.hpp  input.cpp  input.hpp  mac_360driver.cpp  mac_360driver.hpp  mac_VKeyCodes.hpp  mac_controller.hpp  mac_controller.mm  mac_input.mm
src/math/: AABB.hpp  Algorithm.hpp  Angle.hpp  Bounds.cpp  Bounds.hpp  Constants.cpp  Constants.hpp  Matrix.cpp  Matrix.hpp  Plane.hpp  Quaternion.hpp  Transform.hpp  Vector.hpp
src/memory/: Allocator.cpp  Allocator.hpp  Arena.hpp  BasicPoolAllocator.hpp  Block.cpp  Block.hpp  MemoryResource.hpp  ObjectPool.hpp  STLAllocAdapter.hpp  SystemMemoryResource.hpp
src/model/: Generators.cpp  Generators.hpp  LWOLoader.cpp  LWOLoader.hpp  Manipulators.cpp  Manipulators.hpp  StandardModel.cpp  StandardModel.hpp
src/physics/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.hpp  Bounds.cpp  Bounds.hpp  Collider.cpp  Collider.hpp  GlobalTime.hpp  Integratable.hpp  Integration.cpp  Integration.hpp  PhysicMaterial.hpp  PhysicsContext.cpp  PhysicsContext.hpp  PhysicsState.cpp  PhysicsState.hpp  RK4Integrator.hpp  RigidBody.cpp  RigidBody.hpp  Structures.hpp  Transform.cpp  Transform.hpp  Units.hpp
src/plat_macosx/: mac_Application.hpp  mac_Application.mm  mac_InputContext.hpp  mac_InputContext.mm  mac_Keyboard.mm  mac_Logging.mm  mac_OpenGLContext.hpp  mac_OpenGLContext.mm  mac_RenderContext.mm  mac_RenderTarget.mm  mac_VKeyCodes.hpp
src/render/: Buffer.hpp  Camera.hpp  ConstantBuffer.hpp  Context.hpp  ContextOptions.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  OpenGLPipeline.hpp  OpenGLShader.hpp  Pipeline.hpp  PixelFormat.hpp  RenderContext.hpp  Shader.cpp  Shader.hpp  Texture.hpp
src/runtime/: Client.hpp  FrameContext.hpp  Game.cpp  Game.hpp  RunLoop.cpp  RunLoop.hpp  TimeContext.hpp
src/scene/: Behaviour.cpp  Behaviour.hpp  Camera.cpp  Camera.hpp  Entity.hpp  Game.cpp  Game.hpp  Light.cpp  Light.hpp  Material.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Node.hpp  Renderable.hpp  RendererShared.hpp  RigidBody.hpp  Scene.cpp  Scene.hpp  SceneController.cpp  SceneController.hpp  Transform.cpp  Transform.hpp
src/sim/: Game.cpp  Scene.hpp
src/system/: Application.hpp  Config.hpp  DetectPlatform.hpp  Logging.hpp  RenderContext.hpp  RenderContextOptions.hpp  RenderTarget.hpp  RenderTargetOptions.hpp  Time.hpp  mac_Application.hpp  mac_Application.mm  mac_Logging.mm  mac_Time.cpp
src/util/: ConceptTraits.hpp  Hash.hpp  RingBuffer.hpp  StringFormat.cpp  StringFormat.hpp  TextFile.cpp  TextFile.hpp
stardazed.xcodeproj/: project.pbxproj
stardazed.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
(+78 files in other folders)
