cmake_minimum_required(VERSION 3.2)
project(stardazed)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fno-rtti -fno-exceptions -Wall -Wextra -Wno-missing-braces -Wglobal-constructors")

include_directories("src")
include_directories("ext/zlibredux")
include_directories("ext/jpgd")

set(SOURCE_FILES
    ext/jpgd/jpgd.cpp
    ext/jpgd/jpgd.h
    ext/zlibredux/adler32.c
    ext/zlibredux/crc32.c
    ext/zlibredux/crc32.h
    ext/zlibredux/gzguts.h
    ext/zlibredux/inffast.c
    ext/zlibredux/inffast.h
    ext/zlibredux/inffixed.h
    ext/zlibredux/inflate.c
    ext/zlibredux/inflate.h
    ext/zlibredux/inftrees.c
    ext/zlibredux/inftrees.h
    ext/zlibredux/zconf.h
    ext/zlibredux/zlib.h
    ext/zlibredux/zutil.c
    ext/zlibredux/zutil.h
    src/audio/AudioContext.hpp
    src/container/FlagSet.hpp
    src/container/RefTree.hpp
    src/container/STLBufferIterator.hpp
    src/device/Controller.hpp
    src/device/DevicesContext.hpp
    src/device/Keyboard.cpp
    src/device/Keyboard.hpp
    src/device/mac_DevicesContext.hpp
    src/device/mac_VKeyCodes.hpp
    src/device/mac_X360Controller.cpp
    src/device/mac_X360Controller.hpp
    src/device/Mouse.hpp
    src/filesystem/FileSystem.hpp
    src/filesystem/mac_FileSystem.cpp
    src/geom/Generators.cpp
    src/geom/Generators.hpp
    src/geom/Manipulators.cpp
    src/geom/Manipulators.hpp
    src/math/AABB.hpp
    src/math/Algorithm.hpp
    src/math/Angle.hpp
    src/math/Constants.hpp
    src/math/Matrix.cpp
    src/math/Matrix.hpp
    src/math/Plane.hpp
    src/math/Quaternion.hpp
    src/math/Vector.hpp
    src/memory/BasicPoolAllocator.hpp
    src/memory/MemoryResource.hpp
    src/memory/STLAllocAdapter.hpp
    src/render/common/FrameBuffer.hpp
    src/render/common/IndexBuffer.cpp
    src/render/common/IndexBuffer.hpp
    src/render/common/Light.hpp
    src/render/common/Mesh.cpp
    src/render/common/Mesh.hpp
    src/render/common/Pipeline.hpp
    src/render/common/PixelBuffer.cpp
    src/render/common/PixelBuffer.hpp
    src/render/common/PixelFormat.hpp
    src/render/common/PNGFile.cpp
    src/render/common/PNGFile.hpp
    src/render/common/RenderContext.hpp
    src/render/common/RenderPass.hpp
    src/render/common/Shader.hpp
    src/render/common/Texture.cpp
    src/render/common/Texture.hpp
    src/render/common/VertexBuffer.cpp
    src/render/common/VertexBuffer.hpp
    src/render/common/VertexDerivedData.cpp
    src/render/common/VertexDerivedData.hpp
    src/render/common/VertexLayout.cpp
    src/render/common/VertexLayout.hpp
    src/render/opengl/Buffer.cpp
    src/render/opengl/Buffer.hpp
    src/render/opengl/FrameBuffer.cpp
    src/render/opengl/FrameBuffer.hpp
    src/render/opengl/mac_GLRenderContext.hpp
    src/render/opengl/Mesh.cpp
    src/render/opengl/Mesh.hpp
    src/render/opengl/OpenGL.cpp
    src/render/opengl/OpenGL.hpp
    src/render/opengl/Pipeline.cpp
    src/render/opengl/Pipeline.hpp
    src/render/opengl/PixelFormat.hpp
    src/render/opengl/RenderPass.cpp
    src/render/opengl/RenderPass.hpp
    src/render/opengl/Shader.cpp
    src/render/opengl/Shader.hpp
    src/render/opengl/ShaderLibrary.hpp
    src/render/opengl/Texture.cpp
    src/render/opengl/Texture.hpp
    src/render/RenderContext.hpp
    src/runtime/Client.hpp
    src/runtime/FrameContext.hpp
    src/runtime/RunLoop.cpp
    src/runtime/RunLoop.hpp
    src/scene/Behaviour.cpp
    src/scene/Behaviour.hpp
    src/scene/Camera.cpp
    src/scene/Camera.hpp
    src/scene/Entity.hpp
    src/scene/Light.cpp
    src/scene/Light.hpp
    src/scene/Renderable.hpp
    src/scene/Scene.cpp
    src/scene/Scene.hpp
    src/scene/SceneController.cpp
    src/scene/SceneController.hpp
    src/scene/Transform.cpp
    src/scene/Transform.hpp
    src/system/Application.hpp
    src/system/Config.hpp
    src/system/Logging.hpp
    src/system/mac_Application.hpp
    src/system/Time.hpp
    src/util/ConceptTraits.hpp
    src/util/StringFormat.cpp
    src/util/StringFormat.hpp
    src/util/TextFile.cpp
    src/util/TextFile.hpp)

add_library(stardazed ${SOURCE_FILES})
